# rpc_server/api/v1/estimate_user_op_gas.go
@@ -5,6 +5,7 @@ import (
 	"AAStarCommunity/EthPaymaster_BackService/service/operator"
 	"fmt"
 	"github.com/gin-gonic/gin"
+	"golang.org/x/xerrors"
 	"net/http"
 )
 
@@ -25,7 +26,7 @@ func EstimateUserOpGas(c *gin.Context) {
 		response.SetHttpCode(http.StatusBadRequest).FailCode(c, http.StatusBadRequest, errStr)
 		return
 	}
-	if err := ValidateUserOpRequest(request); err != nil {
+	if err := ValidateUserOpRequest(&request); err != nil {
 		errStr := fmt.Sprintf("Request Error [%v]", err)
 		response.SetHttpCode(http.StatusBadRequest).FailCode(c, http.StatusBadRequest, errStr)
 		return
@@ -37,5 +38,21 @@ func EstimateUserOpGas(c *gin.Context) {
 	} else {
 		response.WithDataSuccess(c, result)
 		return
+	}
+}
+func EstimateUserOpGasFunc() MethodFunctionFunc {
+	return func(ctx *gin.Context, jsonRpcRequest model.JsonRpcRequest) (result interface{}, err error) {
+		request, err := ParseTryPayUserOperationParams(jsonRpcRequest.Params)
+		if err != nil {
+			return nil, xerrors.Errorf("ParseTryPayUserOperationParams ERROR [%v]", err)
+		}
+		if err := ValidateUserOpRequest(request); err != nil {
+			return nil, xerrors.Errorf("Request Error [%v]", err)
+		}
+		if result, err := operator.GetEstimateUserOpGas(request); err != nil {
+			return nil, xerrors.Errorf("GetEstimateUserOpGas ERROR [%v]", err)
+		} else {
+			return result, nil
+		}
 	}
 }
