# rpc_server/api/v1/get_support_entrypoint.go
@@ -5,6 +5,7 @@ import (
 	"AAStarCommunity/EthPaymaster_BackService/service/operator"
 	"fmt"
 	"github.com/gin-gonic/gin"
+	"golang.org/x/xerrors"
 	"net/http"
 )
 
@@ -35,4 +36,13 @@ func GetSupportEntrypoint(c *gin.Context) {
 		return
 	}
 	response.WithData(result).Success(c)
+}
+
+func GetSupportEntryPointFunc() MethodFunctionFunc {
+	return func(ctx *gin.Context, jsonRpcRequest model.JsonRpcRequest) (result interface{}, err error) {
+		if jsonRpcRequest.Params[0] == nil || jsonRpcRequest.Params[0].(string) == "" {
+			return nil, xerrors.Errorf("Request Error [network is empty]")
+		}
+		return operator.GetSupportEntrypointExecute(jsonRpcRequest.Params[0].(string))
+	}
 }
