# rpc_server/routers/routers_map.go
@@ -15,6 +15,7 @@ func init() {
 	PrivateRouterMaps = append(PrivateRouterMaps, RouterMap{string(GetSupportStrategy), []RestfulMethod{GET}, v1.GetSupportStrategy})
 	PrivateRouterMaps = append(PrivateRouterMaps, RouterMap{string(GetSupportEntrypoint), []RestfulMethod{GET}, v1.GetSupportEntrypoint})
 	PrivateRouterMaps = append(PrivateRouterMaps, RouterMap{string(EstimateUserOpGas), []RestfulMethod{POST}, v1.EstimateUserOpGas})
+	PrivateRouterMaps = append(PrivateRouterMaps, RouterMap{string(Paymaster), []RestfulMethod{POST}, v1.Paymaster})
 	PublicRouterMaps = append(PublicRouterMaps, RouterMap{string(Auth), []RestfulMethod{POST}, api.Auth})
 	PublicRouterMaps = append(PublicRouterMaps, RouterMap{string(Healthz), []RestfulMethod{GET, HEAD, OPTIONS}, api.Healthz})
 }
@@ -28,4 +29,5 @@ const (
 	EstimateUserOpGas    Path = "api/v1/estimate-user-operation-gas"
 	Auth                 Path = "api/auth"
 	Healthz              Path = "api/healthz"
+	Paymaster            Path = "api/v1/paymaster"
 )
